remove dead code and improve debugger extensibility